--- a/overlay/packages/apps/CoralReef/res/xml/hwbuttons.xml
+++ b/overlay/packages/apps/CoralReef/res/xml/hwbuttons.xml
@@ -1,38 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2016 AospExtended ROM Project
+<!-- Copyright (C) 2016 AquariOS
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/buttons_title">
-
-   <PreferenceCategory
-        android:key="power_button"
-        android:title="@string/power_category">
-
-   <Preference
-	     android:key="power_menu"
-             android:title="@string/power_menu_title"
-             android:summary="@string/power_menu_title_summary"
-	     android:fragment="org.aospextended.extensions.PowerMenuSettings" />
-
-
-    <ListPreference
-        android:key="torch_power_button_gesture"
-        android:title="@string/torch_power_button_gesture_title"
-        android:entries="@array/torch_power_button_gesture_entries"
-        android:entryValues="@array/torch_power_button_gesture_values" />
-    </PreferenceCategory>
+<PreferenceScreen
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:title="@string/hwbuttons_settings_title"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceCategory
         android:key="hardware_keys"
@@ -42,7 +26,7 @@
             android:key="hardware_keys_disable"
             android:title="@string/hardware_keys_disable_title" />
 
-        <org.aospextended.extensions.preference.CustomSeekBarPreference
+        <com.aquarios.coralreef.preference.CustomSeekBarPreference
             android:key="button_brightness"
             android:title="@string/button_brightness_title"
             android:max="255"
@@ -63,7 +47,7 @@
             android:persistent="false"
             android:title="@string/backlight_timeout_title" />
 
-        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
+        <com.aquarios.coralreef.preference.SystemSettingSwitchPreference
             android:key="button_backlight_on_touch_only"
             android:title="@string/button_backlight_on_touch_only_title"
             android:summary="@string/button_backlight_on_touch_only_summary"
@@ -75,46 +59,52 @@
         android:key="back_key"
         android:title="@string/hardware_keys_back_key_title" >
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_back_single_tap"
             android:summary="@string/hardware_keys_single_tap_summary"
             android:title="@string/hardware_keys_single_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_assist_single_tap"
             android:summary="@string/hardware_keys_long_press_summary"
             android:title="@string/hardware_keys_long_press_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_back_double_tap"
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="home_key"
         android:title="@string/hardware_keys_home_key_title" >
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_home_single_tap"
             android:summary="@string/hardware_keys_single_tap_summary"
             android:title="@string/hardware_keys_single_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_home_long_press"
             android:summary="@string/hardware_keys_long_press_summary"
             android:title="@string/hardware_keys_long_press_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_home_double_tap"
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
+
+        <com.aquarios.coralreef.preference.SystemSettingSwitchPreference
+            android:key="allow_incall_home"
+            android:title="@string/allow_incall_home_title"
+            android:summary="@string/allow_incall_home_summary"
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 
@@ -122,17 +112,17 @@
         android:key="app_switch_key"
         android:title="@string/hardware_keys_appswitch_key_title" >
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_overview_single_tap"
             android:summary="@string/hardware_keys_single_tap_summary"
             android:title="@string/hardware_keys_single_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_overview_double_tap"
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
 
     </PreferenceCategory>
 
@@ -140,62 +130,18 @@
         android:key="menu_key"
         android:title="@string/hardware_keys_menu_key_title" >
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_menu_single_tap"
             android:summary="@string/hardware_keys_single_tap_summary"
             android:title="@string/hardware_keys_single_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
+        </com.aquarios.coralreef.preference.ActionPreference>
 
-        <org.aospextended.extensions.preference.ActionPreference
+        <com.aquarios.coralreef.preference.ActionPreference
             android:key="hwkeys_button_menu_double_tap"
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
-        </org.aospextended.extensions.preference.ActionPreference>
-
-</PreferenceCategory>
-
-   <PreferenceCategory
-        android:key="volume_category"
-        android:title="@string/volume_category">
-
-    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
-        android:key="swap_volume_buttons"
-        android:title="@string/swap_volume_buttons_title"
-        android:summary="@string/swap_volume_buttons_summary"
-        android:defaultValue="true" />
-
-    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
-        android:key="volume_keys_control_media_stream"
-        android:title="@string/volume_keys_control_media_stream_title"
-        android:summary="@string/volume_keys_control_media_stream_summary"
-        android:defaultValue="false" />
-
-     <org.aospextended.extensions.preference.SystemSettingSwitchPreference
-        android:key="volume_button_music_control"
-        android:summary="@string/volume_rocker_music_controls_summary"
-        android:title="@string/volume_rocker_music_controls_title"
-        android:defaultValue="true" />
-
-    <ListPreference
-        android:dialogTitle="@string/volume_key_cursor_control_title"
-        android:entries="@array/volume_key_cursor_control_entries"
-        android:entryValues="@array/volume_key_cursor_control_values"
-        android:key="volume_key_cursor_control"
-        android:title="@string/volume_key_cursor_control_title" />
-
-    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
-        android:key="volume_wake_screen"
-        android:summary="@string/volume_rocker_wake_summary"
-        android:title="@string/volume_rocker_wake_title"
-        android:defaultValue="false" />
-
-    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
-        android:key="call_volume_answer"
-        android:title="@string/volume_answer_call_title"
-        android:summary="@string/volume_answer_call_summary"
-        android:defaultValue="false" />
+        </com.aquarios.coralreef.preference.ActionPreference>
 
     </PreferenceCategory>
-
 
 </PreferenceScreen>
